--- a/cotizador_acerta/templates/polizas/confirmacion_solicitud.html
+++ b/cotizador_acerta/templates/polizas/confirmacion_solicitud.html
@@ -236,7 +236,7 @@
                                 <div class="col-md-12">
                                     <div class="col-md-3"></div>
                                     <div class="col-sm-4 col-md-6 text-center">
-                                        <button class="btn btn-lg button" onclick="window.open('{% url 'emitir' solicitud.pk %}')">
+                                        <button id="emitir" class="btn btn-lg button" onclick="window.open('{% url 'emitir' solicitud.pk %}')">
                                             Emitir póliza
                                         </button>
                                     </div>
@@ -272,7 +272,11 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
 <script src="{% static 'plugins/datepicker/locales/bootstrap-datepicker.es.js' %}"></script>
 <script type="text/javascript">
-
+    $('document').ready(function(){
+        $('#emitir').click(function(){
+            window.open("{% url 'emitir-poliza' solicitud.pk %}");
+        });
+    });
 </script>
 
 {% endblock custom_script %}
