--- a/cotizador_acerta/templates/reportes/polizas_list.html
+++ b/cotizador_acerta/templates/reportes/polizas_list.html
@@ -62,7 +62,7 @@
 		                    <li class="divider"></li>
 		                    <li><a href="{% url 'send-solicitud' solicitud.pk %}"><i class="fa fa-send"> Enviar</i></a></li>
 		                    {% if not solicitud.cotizacion.conductor.datos.first.ilicito and not solicitud.cotizacion.conductor.datos.first.politico_expuesto %}
-		                    	<li><a href=""><i class="fa fa-check">  Emitir</i></a></li>
+		                    	<li><a href="{% url 'emitir-poliza' solicitud.pk %}"><i class="fa fa-check" onclick="window.open('{% url 'emitir' solicitud.pk %}')">  Emitir</i></a></li>
 		                    {% endif %}
 		                    <li><a href="" onclick="window.open('{% url 'generacion-pdf-polizas' solicitud.pk %}');"><i class="fa fa-eye">  Ver</i></a></li>
 		                  </ul>
